fix(Objectives->Visibility form): fixed text overlap

--- a/src/public/css/main_en.css
+++ b/src/public/css/main_en.css
@@ -7012,6 +7012,7 @@ ul.newSelectList .miniStylePagination {
 }
 .objectivesDescValue {
   /*height: 105px;*/
+  padding-right: 10px;
   overflow: hidden;
 }
 .afterTextBlock {
